# linalg

./: .gitignore  CMakeLists.txt
include/: bandedmatrix.hh  matrix.hh  recursivematrix.hh
include/linalg/: bandedmatrix.hh  complex.hh  fft.hh  fullmatrix.hh  lu_decomp.hh  lup_decomp.hh  matrix.hh  matrix_io.hh  permutation.hh  recursivematrix.hh  thomas.hh  zeromatrix.hh
scripts/: configure.sh  test.sh
tests/: CMakeLists.txt  config.hh.in  test_bandedmatrix.cc  test_complex.cc  test_efficiency.cc  test_fft.cc  test_fullmatrix.cc  test_io.cc  test_lu.cc  test_lup.cc  test_permutation.cc  test_polymorphism.cc  test_recursivematrix.cc  test_thomas.cc  test_zeromatrix.cc  testutil.hh
